Wed Dec 22 21:49:10 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Memory usage down by ONE THIRD :)
	* I finally did the checkerboard bg thing the Right Way, and saved
	lots of wasted RAM. Hooray.

Wed Dec 22 20:47:11 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* And now index mode has a go at recommending the image size for
	you, if you specify one too small.

Wed Dec 22 18:23:42 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Hehe. Found it. Little bugger. *squish*

Wed Dec 22 18:12:43 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* More modify.c submissions from Andrew, including the start of
	some very funky background setting and image scaling ::)
	* A total rewrite of the index generating code to take into
	account the font size and string length. The old version was
	pretty unflim, so its nice to clean it up a bit. However, the niew
	code still has a couple of issues, which I am looking into.

Wed Dec 22 13:21:12 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Okay, index mode now kinda takes into account the height of the
	font you use. Width is on its way, but is more tricky.

Wed Dec 22 02:17:01 1999  Michael Jennings <mej@eterm.org>

	* Removed a warning, and added "make testclean"

Tue Dec 21 23:28:20 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* More modify.c submissions from Andrew, and some initial menu
	work. The menus are not compiled in right now, and would core if I
	did, so don't touch 'em for now :) They are only 5 mins work atm.
	* I have #ifdef'ed out the code which uses X86VidMode extensions
	until I can find out how common it is not to have them :)

Tue Dec 21 18:40:39 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* The winwidget_rerender_image() function now checks for changed
	dimensions and acts accordingly, and the rotate() function now
	updates the width and height attributes. The modify.c functions