@@ -32,3 +32,4 @@ char **files = NULL;
 winwidget progwin = NULL;
 int actual_file_num = 0;
 Imlib_Image *checks=NULL;
+int rectangles_on=0;
