@@ -45,6 +45,14 @@ winwidget_allocate (void)
   ret->zoom = 1.0;
   ret->timeout = 0;
 
+    /* hoss - rectangle drawing stuff */
+  ret->rectangle_drawing_mode=0;
+  ret->startrecx=0;
+  ret->startrecy=0;
+  ret->endrecx=0;
+  ret->endrecy=0;
+ ret->rec_im=NULL;
+
   return ret;
 }
 
